[package]
name = "rdrive"
version = "0.1.0"
authors = ["Benjamin Sproule <benjamin@benjaminsproule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.30"
glob = "0.3.1"
google-drive3 = "*"
hyper = "^1.1.0"
hyper-rustls = "^0.24.2"
log4rs = { version = "1.2.0", features = ["file_appender"] }
log = "0.4"
mime = "0.3.17"
mime_guess = "2.0.4"
regex = "1"
rusqlite = "0.30.0"
serde = { version = "^1.0.194", features = ["derive"] }
serde_json = "^1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
yup-oauth2 = "^8.3.2"
serial_test = "2.0.0"
