[package]
name = "rdrive"
version = "0.1.0"
authors = ["Benjamin Sproule <benjamin@benjaminsproule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
futures = "0.3.30"
glob = "0.3.1"
google-drive3 = "5.0.4+20230115"
hyper = {version = "^0.14.28", features = ["client"]}
hyper-rustls = "^0.25.0"
log4rs = { version = "1.3.0", features = ["file_appender"] }
log = "0.4"
mime = "0.3.17"
mime_guess = "2.0.4"
regex = "1"
rusqlite = "0.31.0"
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "^1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
yup-oauth2 = "^8.3.2"
serial_test = "3.0.0"
async-recursion = "1.0.5"
