[package]
name = "rdrive"
version = "0.1.0"
authors = ["Benjamin Sproule <benjamin@benjaminsproule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
glob = "0.3.1"
google-drive3 = "6.0.0"
log4rs = { version = "1.3.0", features = ["file_appender"] }
log = "0.4.21"
mime = "0.3.17"
mime_guess = "2.0.5"
regex = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "^1.0.210", features = ["derive"] }
serde_json = "^1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
serial_test = "3.1.1"
async-recursion = "1.1.1"
